--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documents</title>
 </head>
 <body>
 
     <h2 data-app-name></h2>
 
     <script src="./index.js"></script>
-    
+
 </body>
 </html>
