Login and Registration UI

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,19 @@
 </head>
 <body>
 
+  <!-- MY ACCOUNT -->
+  <div id="nav_header" class="d-flex justify-content-between">
     <h2 data-app-name></h2>
+    <a id="myAccount" onclick="acounts.js" class="nav-link active" href="../src/Services/myAccount.html">My Account</a>
+    <!-- MY ACCOUNT NAV -->
+   </div>
+
+    <!-- <h2 data-app-name></h2> -->
     <!-- As a link -->
-    <nav class="navbar navbar-light bg-light">
+    <!-- <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand right" href="/">Home</a>
-    </nav>
+    </nav> -->
+
 <div id="container">
     <section>
       <div id="header" class="header jumbotron jumbotron-fluid">
